# ellie

./: .gitignore  .gitmodules  CMakeLists.txt
include/: CMakeLists.txt
src/: CMakeLists.txt  config.h  main.cc  template_handler.cc  template_handler.h
src/templates/: home.html  layout.html
