add_library(config config.h)
target_link_libraries(config PUBLIC absl::strings)
target_link_libraries(config PUBLIC absl::log)

add_library(template_handler template_handler.cc)
target_link_libraries(template_handler PUBLIC jinja2cpp)
target_link_libraries(template_handler PUBLIC absl::log)
target_link_libraries(template_handler PUBLIC absl::status)
target_link_libraries(template_handler PUBLIC absl::statusor)
target_link_libraries(template_handler PUBLIC absl::flat_hash_set)

add_executable(ellie main.cc)
target_link_libraries(ellie PUBLIC absl::log)
target_link_libraries(ellie PUBLIC absl::status)
target_link_libraries(ellie PUBLIC absl::statusor)
target_link_libraries(ellie PUBLIC Crow::Crow)
target_link_libraries(ellie PUBLIC jinja2cpp)
target_link_libraries(ellie PUBLIC config)
target_link_libraries(ellie PUBLIC template_handler)